# Omna

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  LAUNCH.md  PUBLISHING.md  README.md  benchmarks.json  demo.cast  pyproject.toml
.github/workflows/: release.yml
docs/: benchmark.md
omna/: __init__.py  ask.py  embedder.py  frame.py  index.py  pii.py  understand.py
scripts/: benchmark.py  benchmark_pii.py  demo_cfpb.py  demo_data.py  demo_shield.py  demo_sword.py  demo_terminal.py  employees.parquet  generate_demo_data.py  pii_diagnostic.py  smoke_test.py
tests/: test_ask.py  test_embedder.py  test_frame.py  test_import_speed.py  test_index.py  test_namespace.py  test_pii.py  test_pii_frame.py  test_similarity.py  test_understand.py
